# clopener_cpp_cis6600

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  closing_flow.cpp  closing_flow.h  closing_flow_helpers.cpp  closing_flow_helpers.h  closing_flow_types.h  main.cpp  per_face_prin_curvature.cpp  per_face_prin_curvature.h
include/: split_edges.cpp  split_edges_until_bound.cpp
